# esp-idf-monitor

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: build.yml  create_gh_release.yaml  dangerjs.yml  issue_comment.yml  new_issues.yml  new_prs.yml  realease_pypi.yml  release_pypi.yml  sync-jira.yml
esp_idf_monitor/: __init__.py  __main__.py  config.py  gdb_panic_server.py  idf_monitor.py
esp_idf_monitor/base/: __init__.py  ansi_color_converter.py  argument_parser.py  binlog.py  chip_specific_config.py  console_parser.py  console_reader.py  constants.py  coredump.py  exceptions.py  gdbhelper.py  key_config.py  line_matcher.py  logger.py  monitor_secure_exec.py  output_helpers.py  reset.py  rom_elf_getter.py  serial_handler.py  serial_reader.py  stoppable_thread.py  web_socket_client.py
esp_idf_monitor/idf_monitor_base/: console_parser.py  constants.py  gdbhelper.py  output_helpers.py  serial_handler.py  serial_reader.py  stoppable_thread.py
test/: .build-test-rules.yml  idf_monitor_wrapper.py  run_test_idf_monitor.py  sitecustomize.py
test/host_test/: conftest.py  test_monitor.py
test/host_test/inputs/: binlog  binlog_out.txt  bootloader.elf  color.txt  color_out.txt  in1f1.txt  in1f2.txt  in2.txt  in2f1.txt  log.elf
test/test_apps/: conftest.py  pytest.ini
test/test_apps/linux_target/: CMakeLists.txt  pytest_linux_target.py
test/test_apps/linux_target/main/: CMakeLists.txt  linux_target.c
test/test_apps/monitor_addr_lookup/: pytest_monitor_addr_lookup.py
test/test_apps/monitor_addr_lookup/main/: main.c
test/test_apps/monitor_ide_integration/: pytest_monitor_ide_integration.py
test/tests/: core1.txt  riscv_panic1.txt  riscv_panic1_out.txt
